--- a/css/styles.css
+++ b/css/styles.css
@@ -183,7 +183,7 @@ body {
 .header-link-color::after {
   content: '';
   position: absolute;
-  min-width: 48px;
+  width: 100%;
   height: 4px;
   border-radius: 2px;
   background-color: #404bbf;
@@ -807,15 +807,4 @@ body {
   font-weight: 500;
   line-height: 1.5;
   letter-spacing: 0.02em;
-}
-.backdrop-modal-div {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-.modal-div-input {
-  width: 360px;
-  position: relative;
-  border-radius: 4px;
-  border: 1px solid rgba(46, 47, 66, 0.4);
 }
