--- a/css/styles.css
+++ b/css/styles.css
@@ -747,7 +747,10 @@ body {
   min-height: 584px;
   top: 50%;
   left: 50%;
-
+  padding-top: 72px;
+  padding-right: 24px;
+  padding-bottom: 24px;
+  padding-left: 24px;
   transform: translateX(-50%) translateY(-50%);
   border-radius: 4px;
   background-color: #fcfcfc;
@@ -792,10 +795,9 @@ body {
 
 .modal-name-title {
   display: block;
-  margin-top: 72px;
-  margin-right: 24px;
+
   margin-bottom: 16px;
-  margin-left: 24px;
+
   justify-content: center;
   align-items: center;
   width: 360px;
@@ -807,4 +809,48 @@ body {
   font-weight: 500;
   line-height: 1.5;
   letter-spacing: 0.02em;
+}
+.backdrop_label {
+  display: block;
+}
+.backdrop_form {
+  color: #8e8f99;
+
+  font-family: 'Roboto', sans-serif;
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  margin-bottom: 8px;
+}
+.modal_div {
+  position: relative;
+  margin-top: 4px;
+  margin-bottom: 8px;
+}
+.modal_div_input {
+  width: 360px;
+  height: 40px;
+  padding-top: 11px;
+  padding-right: 38px;
+  padding-bottom: 11px;
+  padding-left: 38px;
+  border-radius: 4px;
+  border: 1px solid;
+  border-color: rgba(46, 47, 66, 0.4);
+  outline: none;
+  color: #2e2f42;
+}
+.modal_div_icon {
+  position: absolute;
+  left: 16px;
+  top: 11px;
+}
+.modal_div_input:focus {
+  border-color: #4d5ae5;
+}
+.modal_div_input:focus + .modal_div_icon {
+  border-color: #4d5ae5;
+  fill: #4d5ae5;
 }
