--- a/css/styles.css
+++ b/css/styles.css
@@ -854,3 +854,115 @@ body {
   border-color: #4d5ae5;
   fill: #4d5ae5;
 }
+.modal_div_comment {
+  margin-bottom: 16px;
+}
+.textarea {
+  border-radius: 4px;
+  border: 1px solid;
+  border-color: rgba(46, 47, 66, 0.4);
+  padding: 8px 16px 8px 16px;
+  width: 100%;
+  outline: none;
+  min-height: 120px;
+  color: #2e2f42;
+}
+.textarea:focus {
+  border-color: #4d5ae5;
+}
+.checkbox-label {
+  color: #8e8f99;
+
+  font-family: 'Roboto', sans-serif;
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  display: flex;
+  margin-bottom: 24px;
+}
+.checkbox-link {
+  color: #4d5ae5;
+  padding-left: 4px;
+}
+.checkbox-span {
+  width: 16px;
+  height: 16px;
+  /* border: 1px;
+  border-color: rgba(46, 47, 66, 0.4); */
+  stroke-width: 1px;
+  stroke: rgba(46, 47, 66, 0.4);
+  display: flex;
+  /* justify-content: center;
+  align-items: center;
+  display: inline-block; */
+}
+.checkbox-svg {
+  color: #2e2f42;
+}
+.button-modal {
+  width: 169px;
+  right: 56px;
+  padding: 16px 32px 16px 32px;
+  margin: 0 auto;
+}
+
+.footer-form-text {
+  color: #fff;
+
+  font-family: 'Roboto', sans-serif;
+  font-size: 16px;
+
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  margin-bottom: 16px;
+}
+.footer-div-email {
+  display: flex;
+}
+.footer-email {
+  width: 264px;
+  height: 40px;
+  border-radius: 4px;
+  border: 1px solid #fff;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+  margin-right: 24px;
+  background-color: #2e2f42;
+  padding: 8px 16px;
+  color: #fff;
+  font-family: 'Roboto', sans-serif;
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+}
+.footer-div-input {
+  display: flex;
+  flex-direction: column;
+}
+.footer-button {
+  color: #fff;
+  width: 165px;
+  right: 40px;
+  padding: 8px 24px 8px 24px;
+  border-radius: 4px;
+  background-color: #4d5ae5;
+  font-family: 'Roboto', sans-serif;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  border: none;
+  display: block;
+  cursor: pointer;
+
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.footer-button-svg {
+  color: #e7e9fc;
+  background-color: brown;
+}
