--- a/css/styles.css
+++ b/css/styles.css
@@ -938,6 +938,7 @@ body {
   font-weight: 400;
   line-height: 1.17;
   letter-spacing: 0.04em;
+  outline: none;
 }
 .footer-div-input {
   display: flex;
