--- a/css/styles.css
+++ b/css/styles.css
@@ -866,6 +866,7 @@ body {
   outline: none;
   min-height: 120px;
   color: #2e2f42;
+  resize: none;
 }
 .textarea:focus {
   border-color: #4d5ae5;
@@ -873,14 +874,12 @@ body {
 .checkbox-label {
   color: #8e8f99;
 
-  font-family: 'Roboto', sans-serif;
   font-size: 12px;
-  font-style: normal;
+
   font-weight: 400;
   line-height: 1.17;
   letter-spacing: 0.04em;
-  display: flex;
-  margin-bottom: 24px;
+  display: block;
 }
 .checkbox-link {
   color: #4d5ae5;
@@ -889,17 +888,23 @@ body {
 .checkbox-span {
   width: 16px;
   height: 16px;
-  /* border: 1px;
-  border-color: rgba(46, 47, 66, 0.4); */
-  stroke-width: 1px;
-  stroke: rgba(46, 47, 66, 0.4);
-  display: flex;
-  /* justify-content: center;
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  border-radius: 2px;
+  display: inline-flex;
   align-items: center;
-  display: inline-block; */
+  justify-content: center;
+  margin-right: 8px;
 }
+/* .checkbox-class:checked + .checkbox-label > .checkbox-span {
+  background-color: #404bbf;
+  border: none;
+  fill: #f4f4fd;
+} */
 .checkbox-svg {
-  color: #2e2f42;
+  fill: #f4f4fd;
+}
+.checkbox-div {
+  margin-bottom: 24px;
 }
 .button-modal {
   width: 169px;
@@ -907,7 +912,9 @@ body {
   padding: 16px 32px 16px 32px;
   margin: 0 auto;
 }
-
+.footer-form {
+  display: flex;
+}
 .footer-form-text {
   color: #fff;
 
@@ -964,6 +971,12 @@ body {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .footer-button-svg {
+  position: absolute;
   color: #e7e9fc;
-  background-color: brown;
+}
+
+.checkbox-class:checked + .checkbox-label > .checkbox-span {
+  background-color: #404bbf;
+  border: none;
+  fill: #f4f4fd;
 }
