--- a/css/styles.css
+++ b/css/styles.css
@@ -813,7 +813,7 @@ body {
 .backdrop_label {
   display: block;
 }
-.backdrop_form {
+.backdrop_label {
   color: #8e8f99;
 
   font-family: 'Roboto', sans-serif;
@@ -914,6 +914,7 @@ body {
 }
 .footer-form {
   display: flex;
+  gap: 24px;
 }
 .footer-form-text {
   color: #fff;
@@ -936,14 +937,14 @@ body {
   border: 1px solid #fff;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
   margin-right: 24px;
-  background-color: #2e2f42;
+  background-color: transparent;
   padding: 8px 16px;
   color: #fff;
   font-family: 'Roboto', sans-serif;
   font-size: 12px;
   font-style: normal;
   font-weight: 400;
-  line-height: 1.17;
+  line-height: 1.5;
   letter-spacing: 0.04em;
   outline: none;
 }
@@ -953,7 +954,8 @@ body {
 }
 .footer-button {
   color: #fff;
-  width: 165px;
+
+  min-width: 165px;
   right: 40px;
   padding: 8px 24px 8px 24px;
   border-radius: 4px;
@@ -965,7 +967,9 @@ body {
   line-height: 1.5;
   letter-spacing: 0.04em;
   border: none;
-  display: block;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   cursor: pointer;
 
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -973,6 +977,7 @@ body {
 .footer-button-svg {
   position: absolute;
   color: #e7e9fc;
+  margin-left: 16px;
 }
 
 .checkbox-class:checked + .checkbox-label > .checkbox-span {
