--- a/css/styles.css
+++ b/css/styles.css
@@ -810,20 +810,17 @@ body {
   line-height: 1.5;
   letter-spacing: 0.02em;
 }
-.backdrop_label {
-  display: block;
-  margin-bottom: 4px;
-}
+
 .backdrop_label {
   color: #8e8f99;
-
+  display: block;
+  margin-bottom: 4px;
   font-family: 'Roboto', sans-serif;
   font-size: 12px;
   font-style: normal;
   font-weight: 400;
   line-height: 1.17;
   letter-spacing: 0.04em;
-  margin-bottom: 8px;
 }
 .modal_div {
   position: relative;
@@ -902,6 +899,9 @@ body {
   align-items: center;
   justify-content: center;
   margin-right: 8px;
+  fill: transparent;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 /* .checkbox-class:checked + .checkbox-label > .checkbox-span {
   background-color: #404bbf;
