--- a/css/styles.css
+++ b/css/styles.css
@@ -863,6 +863,14 @@ body {
   margin-bottom: 16px;
 }
 .textarea {
+  height: 120px;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  color: rgba(46, 47, 66, 0.4);
+  background-color: transparent;
+  outline: transparent;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   border-radius: 4px;
   border: 1px solid;
   border-color: rgba(46, 47, 66, 0.4);
@@ -912,7 +920,7 @@ body {
   fill: #f4f4fd;
 }
 .checkbox-div {
-  margin-bottom: 16px;
+  margin-bottom: 24px;
 }
 .button-modal {
   width: 169px;
